chore(index): Agrega el concepto de Muñoz Montilla al índice general

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                 // --- NUEVAS ENTRADAS AÑADIDAS AQUÍ ---
                 { title: 'Modelo Tridimensional (Hungerford y Volk)', id: 'modelo_tridimensional', app: 'concepts' },
                 { title: 'El Poder de la Experiencia Directa (Pirchio et al.)', id: 'pirchio_experiencia_directa', app: 'concepts' },
+                { title: 'Las Barreras Invisibles (Muñoz Montilla)', id: 'munoz_barreras_estructurales', app: 'concepts' },
                 
                 // Datos de la app "Herramientas Estadísticas"
                 { title: 'Estadísticos Descriptivos', id: 'descriptives', app: 'tools' },
